// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshots should match for basic 1`] = `
.c2 {
  display: inline-block;
  fill: currentColor;
  height: 24px;
  width: 24px;
  vertical-align: middle;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 2.5rem 1rem 3rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  border-left: 5px solid hsl(0,57%,48%);
  box-shadow: 0 4px 6px hsla(0,0%,0%,0.2);
  background-color: hsl(0,57%,63%);
  color: #ffffff;
  text-shadow: 0 1px 2px rgba(0,0,0,0.2);
  width: 100%;
}

.c0 h2 {
  font-weight: bold;
  margin-bottom: 0.25rem;
  margin-right: 1.5rem;
}

.c0 > div {
  margin-top: 0.25rem;
}

.c1 {
  left: 1rem;
  position: absolute;
  top: 1.25rem;
}

<div
  aria-atomic="true"
  className="c0"
  role="alert"
>
  <svg
    className="c1 c2"
    size="24"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 9a1 1 0 0 1-1-1V8a1 1 0 0 1 2 0v4a1 1 0 0 1-1 1zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
    />
  </svg>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
</div>
`;

exports[`Alert snapshots should match with button 1`] = `
.c2 {
  display: inline-block;
  fill: currentColor;
  height: 24px;
  width: 24px;
  vertical-align: middle;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  line-height: 1;
  outline: none;
  padding: 0;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 2.5rem 1rem 3rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  border-left: 5px solid hsl(0,57%,48%);
  box-shadow: 0 4px 6px hsla(0,0%,0%,0.2);
  background-color: hsl(0,57%,63%);
  color: #ffffff;
  text-shadow: 0 1px 2px rgba(0,0,0,0.2);
  width: 100%;
}

.c0 h2 {
  font-weight: bold;
  margin-bottom: 0.25rem;
  margin-right: 1.5rem;
}

.c0 > div {
  margin-top: 0.25rem;
}

.c1 {
  left: 1rem;
  position: absolute;
  top: 1.25rem;
}

.c3 {
  position: absolute;
  top: 1.25rem;
  right: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c3::after {
  border-radius: 50%;
  content: '';
  padding: 1rem;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
  top: 50%;
  -webkit-transition: background-color 0.25s ease-in;
  transition: background-color 0.25s ease-in;
}

.c3:hover::after {
  background-color: rgba(255,255,255,0.1);
}

<div
  aria-atomic="true"
  className="c0"
  role="alert"
>
  <svg
    className="c1 c2"
    size="24"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 9a1 1 0 0 1-1-1V8a1 1 0 0 1 2 0v4a1 1 0 0 1-1 1zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
    />
  </svg>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
  <button
    className="c3 c4"
    onClick={[Function]}
  >
    <svg
      className="c2"
      size="24"
      viewBox="0 0 24 24"
    >
      <path
        d="M16.24 14.83a1 1 0 0 1-1.41 1.41L12 13.41l-2.83 2.83a1 1 0 0 1-1.41-1.41L10.59 12 7.76 9.17a1 1 0 0 1 1.41-1.41L12 10.59l2.83-2.83a1 1 0 0 1 1.41 1.41L13.41 12l2.83 2.83z"
      />
    </svg>
    <span
      className="c5"
    >
      Close Alert
    </span>
  </button>
</div>
`;
